Refactored out dead MetadataItemPermissionManager.java. Cleaned up behavior stateful manager classes. Removed MetadataPermissionDao as it is not used. DRY'd up code in MetadataShareResource Removed id and uuid fields from MetadataPermission since they are nested objects that do not need them.