@@ -5,7 +5,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.mongodb.MongoClientSettings;
 import com.mongodb.MongoCredential;
 import com.mongodb.ServerAddress;
-import com.mongodb.client.*;
+import com.mongodb.client.MongoClient;
+import com.mongodb.client.MongoClients;
+import com.mongodb.client.MongoCollection;
+import com.mongodb.client.MongoDatabase;
 import org.bson.Document;
 import org.bson.codecs.configuration.CodecRegistries;
 import org.bson.codecs.configuration.CodecRegistry;
@@ -15,15 +18,16 @@ import org.iplantc.service.common.Settings;
 import org.iplantc.service.common.exceptions.PermissionException;
 import org.iplantc.service.metadata.exceptions.MetadataException;
 import org.iplantc.service.metadata.exceptions.MetadataQueryException;
-import org.iplantc.service.metadata.managers.MetadataItemPermissionManager;
+import org.iplantc.service.metadata.managers.MetadataPermissionManager;
 import org.iplantc.service.metadata.model.MetadataItem;
 import org.iplantc.service.metadata.model.MetadataItemCodec;
 import org.iplantc.service.metadata.model.MetadataPermission;
 import org.iplantc.service.metadata.model.enumerations.PermissionType;
 import org.testng.Assert;
-import org.testng.annotations.*;
+import org.testng.annotations.AfterMethod;
+import org.testng.annotations.BeforeMethod;
+import org.testng.annotations.Test;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -31,8 +35,7 @@ import static org.bson.codecs.configuration.CodecRegistries.fromProviders;
 import static org.bson.codecs.configuration.CodecRegistries.fromRegistries;
 
 @Test(groups = {"integration"})
-
-public class MetadataDataProcessingTest {
+public class MetadataDataProcessingIT {
     String username = "TEST_USER";
     String readUser = "READ_USER";
     String readWriteUser = "READWRITE_USER";
@@ -49,9 +52,9 @@ public class MetadataDataProcessingTest {
         toAdd.setName("mustard plant");
         toAdd.setValue(mapper.createObjectNode().put("testKey", "testValue"));
 
-        MetadataPermission readPermission = new MetadataPermission(toAdd.getUuid(), readUser, PermissionType.READ);
-        MetadataPermission readWritePermission = new MetadataPermission(toAdd.getUuid(), readWriteUser, PermissionType.READ_WRITE);
-        toAdd.setPermissions(new ArrayList<>(Arrays.asList(readPermission, readWritePermission)));
+        MetadataPermission readPermission = new MetadataPermission(readUser, PermissionType.READ);
+        MetadataPermission readWritePermission = new MetadataPermission(readWriteUser, PermissionType.READ_WRITE);
+        toAdd.getPermissions().addAll(List.of(readPermission, readWritePermission));
         addedMetadataItem = toAdd;
         return toAdd;
     }
@@ -90,45 +93,45 @@ public class MetadataDataProcessingTest {
 
     //find metadata item - with read permission
     @Test
-    public void findMetadataItemReadPermissionTest() throws PermissionException, MetadataQueryException {
+    public void findMetadataItemReadPermissionTest() throws PermissionException, MetadataQueryException, MetadataException {
         MetadataSearch search = new MetadataSearch(this.readUser);
         search.setUuid(addedMetadataItem.getUuid());
         List<MetadataItem> result = search.find("{\"name\":\"mustard plant\"}");
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.readUser, addedMetadataItem.getUuid());
-        Assert.assertTrue(pemManager.canRead());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.readUser);
+        Assert.assertTrue(pemManager.canRead(readUser));
         Assert.assertEquals(result.size(), 1);
         Assert.assertEquals(result.get(0), addedMetadataItem);
     }
 
     //find metadata item - with read/write permission
     @Test
-    public void findMetadataItemReadWritePermissionTest() throws PermissionException, MetadataQueryException {
+    public void findMetadataItemReadWritePermissionTest() throws PermissionException, MetadataQueryException, MetadataException {
         MetadataSearch search = new MetadataSearch(this.readWriteUser);
         search.setUuid(addedMetadataItem.getUuid());
         List<MetadataItem> result = search.find("{\"name\":\"mustard plant\"}");
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.readWriteUser, addedMetadataItem.getUuid());
-        Assert.assertTrue(pemManager.canRead());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.readWriteUser);
+        Assert.assertTrue(pemManager.canRead(readWriteUser));
         Assert.assertEquals(result.size(), 1);
         Assert.assertEquals(result.get(0), addedMetadataItem);
     }
 
     //find metadata item - with no permissions
     @Test
-    public void findMetadataItemNoPermissionTest() throws PermissionException, MetadataQueryException {
+    public void findMetadataItemNoPermissionTest() throws PermissionException, MetadataQueryException, MetadataException {
         MetadataSearch search = new MetadataSearch(this.noneUser);
         search.setUuid(addedMetadataItem.getUuid());
 
         List<MetadataItem> result = search.find("{\"name\":\"mustard plant\"}");
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.noneUser, addedMetadataItem.getUuid());
-        Assert.assertFalse(pemManager.canRead());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.noneUser);
+        Assert.assertFalse(pemManager.canRead(noneUser));
         Assert.assertEquals(result.size(), 0);
     }
 
     //update metadata item - with read permission
-    @Test
+    @Test(expectedExceptions = PermissionException.class)
     public void updateMetadataItemReadPermissionTest() throws PermissionException, MetadataQueryException, MetadataException {
         MetadataSearch ownerSearch = new MetadataSearch(this.username);
         ownerSearch.setUuid(addedMetadataItem.getUuid());
@@ -140,15 +143,10 @@ public class MetadataDataProcessingTest {
         metadataItem.setName("New Name");
         search.setMetadataItem(metadataItem);
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.readUser, addedMetadataItem.getUuid());
-        Assert.assertFalse(pemManager.canWrite());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.readUser);
+        Assert.assertFalse(pemManager.canWrite(readUser));
 
-        Assert.assertThrows(PermissionException.class, () -> search.updateMetadataItem());
-
-        List<MetadataItem> originalResult = search.find("{\"name\":\"mustard plant\"}");
-        Assert.assertEquals(originalResult.size(), 1);
-        List<MetadataItem> updatedResult = search.find("{\"name\":\"NewName\"}");
-        Assert.assertEquals(updatedResult.size(), 0);
+        search.updateCurrentMetadataItem();
     }
 
     //update metadata item - with read/write permission
@@ -165,10 +163,10 @@ public class MetadataDataProcessingTest {
         metadataItem.setName("New Name");
         search.setMetadataItem(metadataItem);
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.readWriteUser, addedMetadataItem.getUuid());
-        Assert.assertTrue(pemManager.canWrite());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.readWriteUser);
+        Assert.assertTrue(pemManager.canWrite(readWriteUser));
 
-        Assert.assertNotNull(search.updateMetadataItem());
+        Assert.assertNotNull(search.updateCurrentMetadataItem());
 
         List<MetadataItem> originalResult = search.find("{\"name\":\"mustard plant\"}");
         Assert.assertEquals(originalResult.size(), 0);
@@ -177,7 +175,7 @@ public class MetadataDataProcessingTest {
     }
 
     //update metadata item - with no permissions
-    @Test
+    @Test(expectedExceptions = PermissionException.class)
     public void updateMetadataItemNoPermissionTest() throws PermissionException, MetadataQueryException, MetadataException {
         MetadataSearch ownerSearch = new MetadataSearch(this.username);
         ownerSearch.setUuid(addedMetadataItem.getUuid());
@@ -189,17 +187,14 @@ public class MetadataDataProcessingTest {
         search.setMetadataItem(metadataItem);
         search.setAccessibleOwnersImplicit();
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.noneUser, addedMetadataItem.getUuid());
-        Assert.assertFalse(pemManager.canWrite());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.noneUser);
+        Assert.assertFalse(pemManager.canWrite(noneUser));
 
-        Assert.assertThrows(PermissionException.class, () -> search.updateMetadataItem());
-
-        List<MetadataItem> originalResult = search.find("{\"name\":\"New Name\"}");
-        Assert.assertEquals(originalResult.size(), 0);
+        search.updateCurrentMetadataItem();
     }
 
     //delete metadata item - with no permissions
-    @Test
+    @Test(expectedExceptions = PermissionException.class)
     public void DeleteMetadataItemNoPermissionTest() throws PermissionException, MetadataQueryException, MetadataException {
         MetadataSearch ownerSearch = new MetadataSearch(this.username);
         ownerSearch.setUuid(addedMetadataItem.getUuid());
@@ -210,17 +205,15 @@ public class MetadataDataProcessingTest {
         search.setMetadataItem(metadataItem);
         search.setAccessibleOwnersImplicit();
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.noneUser, addedMetadataItem.getUuid());
-        Assert.assertFalse(pemManager.canWrite());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.username);
+        Assert.assertFalse(pemManager.canWrite(noneUser));
 
-        Assert.assertThrows(PermissionException.class, () -> search.deleteMetadataItem());
+        search.deleteCurrentMetadataItem();
 
-        List<MetadataItem> originalResult = search.find("{\"name\":\"New Name\"}");
-        Assert.assertEquals(originalResult.size(), 0);
     }
 
     //delete metadata item - with read permission
-    @Test
+    @Test(expectedExceptions = PermissionException.class)
     public void DeleteMetadataItemReadPermissionTest() throws PermissionException, MetadataQueryException, MetadataException {
         MetadataSearch ownerSearch = new MetadataSearch(this.username);
         ownerSearch.setUuid(addedMetadataItem.getUuid());
@@ -231,10 +224,10 @@ public class MetadataDataProcessingTest {
         search.setMetadataItem(metadataItem);
         search.setAccessibleOwnersImplicit();
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.readUser, addedMetadataItem.getUuid());
-        Assert.assertFalse(pemManager.canWrite());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.readUser);
+        Assert.assertFalse(pemManager.canWrite(readUser));
 
-        Assert.assertThrows(PermissionException.class, () -> search.deleteMetadataItem());
+        search.deleteCurrentMetadataItem();
 
         List<MetadataItem> originalResult = search.find("{\"name\":\"New Name\"}");
         Assert.assertEquals(originalResult.size(), 0);
@@ -252,10 +245,10 @@ public class MetadataDataProcessingTest {
         search.setMetadataItem(metadataItem);
         search.setAccessibleOwnersImplicit();
 
-        MetadataItemPermissionManager pemManager = new MetadataItemPermissionManager(this.readWriteUser, addedMetadataItem.getUuid());
-        Assert.assertTrue(pemManager.canWrite());
+        MetadataPermissionManager pemManager = new MetadataPermissionManager(addedMetadataItem, this.username);
+        Assert.assertTrue(pemManager.canWrite(readWriteUser));
 
-        Assert.assertNotNull(search.deleteMetadataItem());
+        Assert.assertNotNull(search.deleteCurrentMetadataItem());
 
         List<MetadataItem> updatedResult = search.find("{\"name\":\"New Name\"}");
         Assert.assertEquals(updatedResult.size(), 0);
